# anti-money-laundering-AML-

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: phase3-compare.yml  test.yml
artifacts/: checksums.sha256  metrics_baseline.json  phase2_langgraph_metrics.json  phase2_langgraph_results.jsonl  phase3_comparison_metrics.json
data/fixtures/: eval.jsonl  ground_truth_matches.csv
docs/: architecture.md  phase3_framework_comparison.md  reproducibility.md
docs/images/: phase3_architecture.mmd
src/aml_copilot/: schemas.py
src/aml_copilot/phase2_eval/: __init__.py  metrics.py  run_langgraph_eval.py
src/aml_copilot/phase3_compare/: __init__.py  _shared.py  crewai_runner.py  langgraph_runner.py  metrics.py  mock_llm.py  openai_agents_runner.py  protocol.py  run_comparison.py  testing.py
src/aml_copilot/step0_scaffold/: assertions.py  data_loader.py  loader.py  validation.py
src/aml_copilot/step1_identity/: build.py  ground_truth.py  ofac_reader.py  overlay.py
src/aml_copilot/step2_sanctions/: index.py  screen.py
src/aml_copilot/step3_entity/: resolve.py
src/aml_copilot/step4_rules/: engine.py  thresholds.py
src/aml_copilot/step5_anomaly/: features.py  scorer.py
src/aml_copilot/step6_eval/: builder.py
src/aml_copilot/step7_runner/: decision.py  run_baseline.py
src/aml_copilot/step8_metrics/: metrics.py
src/aml_copilot/utils/: checksum.py  normalize.py
tests/: conftest.py  test_m7.py  test_phase2_eval.py  test_phase3_compare.py  test_step0_integration.py  test_step0_scaffold.py  test_step1_identity.py  test_step2_sanctions.py  test_step3_entity.py  test_step4_rules.py  test_step5_anomaly.py  test_step6_eval.py  test_step7_runner.py  test_step8_metrics.py
tests/fixtures/: phase3_expected_comparison.json  phase3_mini_baseline.jsonl  phase3_mini_eval.jsonl
