[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aml-copilot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "polars>=0.20",
    "rapidfuzz>=3.0",
    "faker>=20.0",
    "pydantic>=2.0",
    "scikit-learn>=1.4",
    "numpy>=1.26",
    "lxml>=5.0",
    "langgraph>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
compare = [
    "crewai>=0.80",
    "openai-agents>=0.18",
]

[project.scripts]
run-baseline = "aml_copilot.step7_runner.run_baseline:main"
run-comparison = "aml_copilot.phase3_compare.run_comparison:main"

[tool.hatch.build.targets.wheel]
packages = ["src/aml_copilot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
    "integration: tests that require generated artifacts (eval.jsonl, results.jsonl) — skip with -m 'not integration'",
    "live: tests that require real API keys or live network access — always skipped in CI",
    "slow: tests with significant wall-clock time (e.g. full 90-case framework runs)",
    "compare: tests specific to the Phase 3 cross-framework comparison suite",
]

[tool.coverage.run]
source = ["src/aml_copilot"]
omit = ["tests/*"]
